--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +8,7 @@
 
 body {
   background-color: rgb(15, 15, 15);
-  font-family: Roboto, Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .profile-icon {
